--- a/src/app/games/game.request.modal.pug
+++ b/src/app/games/game.request.modal.pug
@@ -42,4 +42,4 @@ include ../template/_mixins
 
 	.modal-footer
 		button.btn.btn-hollow.pull-left(ng-click="$dismiss()") Cancel
-		button.btn.btn-primary(ng-click="vm.submit()", ng-disabled="submitting") Request Game
+		button.btn.btn-primary(ng-click="vm.submit()", ng-disabled="vm.submitting") Request Game
