--- a/src/app/uploads/uploads.backglass.moderate.admin.modal.pug
+++ b/src/app/uploads/uploads.backglass.moderate.admin.modal.pug
@@ -18,9 +18,9 @@ include ./uploads.helper.mixins.pug
 
 		+info('vm.backglass')
 		+authors('vm.backglass')
-		+history()
-		+message(false)
+		+history('vm.backglass')
+		+message('vm', 'vm.backglass', false)
 
 		.clearfix.padder-top
 	.modal-footer
-		+footer('vm.backglass')
+		+footer('vm', 'vm.backglass')
