--- a/src/app/uploads/uploads.release.moderate.admin.modal.pug
+++ b/src/app/uploads/uploads.release.moderate.admin.modal.pug
@@ -10,15 +10,15 @@ include ./uploads.helper.mixins.pug
 		h3.h--shift-up.h--no-margin
 			| {{ vm.release.name }}
 			.pull-right
-				a.btn.shift-up(ui-sref="vm.releaseDetails({ id: vm.release.game.id, releaseId: vm.release.id })")
+				a.btn.shift-up(ui-sref="releaseDetails({ id: vm.release.game.id, releaseId: vm.release.id })")
 					+icon('eye').space-right
 					| Details
 		+info('vm.release')
 		+authors('vm.release')
-		+blockmatches()
-		+history()
-		+message(true)
+		+blockmatches('vm', 'vm.release')
+		+history('vm.release')
+		+message('vm', 'vm.release', true)
 
 		.clearfix.padder-top
 	.modal-footer
-		+footer('vm.release')
+		+footer('vm', 'vm.release')
