--- a/src/app/auth/email.confirmation.pug
+++ b/src/app/auth/email.confirmation.pug
@@ -1,4 +1,4 @@
 include ../template/_mixins
-div.text-center.padder-top-2x.padder-bottom-2x(ng-controller="EmailConfirmationCtrl")
+div.text-center.padder-top-2x.padder-bottom-2x(ng-controller="EmailConfirmationCtrl as vm")
 	+icon('circle-o-notch').svg-spin.svg-4x
 	h3 Checking...
