--- a/src/app/games/game.edit.admin.pug
+++ b/src/app/games/game.edit.admin.pug
@@ -156,7 +156,7 @@ include ../template/_mixins
 									)
 									.span(ng-show="!img.url")
 										+icon('photo').svg-4x(ng-class="{ transparent: vm.game.mediaFile.backglass.uploading }")
-										p {{ mediaFile.backglass.uploadText }}
+										p {{ vm.game.mediaFile.backglass.uploadText }}
 									.span(ng-show="img.loading")
 										+icon('gear').svg-3x.svg-spin--slow
 										p Generating thumbnails...
@@ -171,15 +171,15 @@ include ../template/_mixins
 						li The image must not be stretched or upscaled.
 
 					// info boxes
-					.alert.alert-success.alert--inverted.alert--shifted-up.padder-top(ng-show="backglass.test == 'optimal'")
+					.alert.alert-success.alert--inverted.alert--shifted-up.padder-top(ng-show="vm.backglass.test == 'optimal'")
 						+icon('check-circle').shift-up.space-right
-						| Dimensions are {{ backglass.dimensions }}, which is optimal.
-					.alert.alert-warning.alert--inverted.alert--shifted-up.padder-top(ng-show="backglass.test == 'warning'")
+						| Dimensions are {{ vm.backglass.dimensions }}, which is optimal.
+					.alert.alert-warning.alert--inverted.alert--shifted-up.padder-top(ng-show="vm.backglass.test == 'warning'")
 						+icon('warning').shift-up.space-right
-						| Dimensions are {{ backglass.dimensions }}, where the aspect ratio is <code>1:{{ backglass.ar }}</code> and {{ backglass.arDiff }}% off the ideal <code>1:1.25</code>. Some content will be cropped off.
-					.alert.alert-danger.alert--inverted.alert--shifted-up.padder-top(ng-show="backglass.test == 'error'")
+						| Dimensions are {{ vm.backglass.dimensions }}, where the aspect ratio is <code>1:{{ vm.backglass.ar }}</code> and {{ vm.backglass.arDiff }}% off the ideal <code>1:1.25</code>. Some content will be cropped off.
+					.alert.alert-danger.alert--inverted.alert--shifted-up.padder-top(ng-show="vm.backglass.test == 'error'")
 						+icon('warning').shift-up.space-right
-						| Dimensions are {{ backglass.dimensions }}, where the aspect ratio is <code>1:{{ backglass.ar }}</code> and <strong>{{ backglass.arDiff }}%</strong> off the ideal <code>1:1.25</code>. Please crop the image and try again.
+						| Dimensions are {{ vm.backglass.dimensions }}, where the aspect ratio is <code>1:{{ vm.backglass.ar }}</code> and <strong>{{ vm.backglass.arDiff }}%</strong> off the ideal <code>1:1.25</code>. Please crop the image and try again.
 
 			.alert.alert-danger.alert--shifted-up(ng-show="vm.errors._backglass")
 				+icon('warning').shift-up.space-right
@@ -200,7 +200,7 @@ include ../template/_mixins
 									)
 									.span(ng-show="!img.url")
 										+icon('photo').svg-4x(ng-class="{ transparent: vm.game.mediaFile.logo.uploading }")
-										p {{ mediaFile.logo.uploadText }}
+										p {{ vm.game.mediaFile.logo.uploadText }}
 									.span(ng-show="img.loading")
 										+icon('gear').svg-3x.svg-spin--slow
 										p Generating thumbnails...
