--- a/src/app/games/game.list.pug
+++ b/src/app/games/game.list.pug
@@ -1,4 +1,5 @@
 include ../template/_mixins
+include ../template/paginator
 
 .row.row--fullheight(ng-controller="GameListCtrl as vm")
 
@@ -13,12 +14,7 @@ include ../template/_mixins
 
 		//- pagination
 		.pull-right(ng-show="vm.games.length > 0")
-
-			span(ng-show="vm.pagination.links.first", ng-click="vm.paginate(vm.pagination.links.first)"): +icon('angle-left-skip').smaller.a.a--lighter
-			span.space-left(ng-show="vm.pagination.links.prev", ng-click="vm.paginate(vm.pagination.links.prev)"): +icon('angle-left').smaller.a.a--lighter
-			span.small.space-left PAGE &nbsp; {{ vm.pagination.page }} / {{ vm.pagination.pageCount }}
-			span.space-left(ng-show="vm.pagination.links.next", ng-click="vm.paginate(vm.pagination.links.next)"): +icon('angle-right').smaller.a.a--lighter
-			span.space-left(ng-show="vm.pagination.links.last", ng-click="vm.paginate(vm.pagination.links.last)"): +icon('angle-right-skip').smaller.a.a--lighter
+			+paginator('vm.pagination', 'vm.paginate')
 
 		.clearfix.padder-bottom(ng-show="vm.games.length > 0")
 
@@ -95,10 +91,9 @@ include ../template/_mixins
 		//---------------------------------------------------------------------
 		.panel--rect-block.padder-top-2x(ng-show="vm.AuthService.hasPermission('games/add')")
 			h1.text-center UPLOAD
-
 			.center
 				ul.ul--no-list
-					li: a.text-center(ui-sref="vm.addGame")
+					li: a.text-center(ui-sref="addGame")
 						+icon('plus-circle').space-right.shift-up
 						| Add Game
 			p.padder-top
