--- a/src/app/home/home.pug
+++ b/src/app/home/home.pug
@@ -1,4 +1,5 @@
 include ../template/_mixins
+include ../template/paginator
 
 .jumbotron
 
@@ -15,14 +16,10 @@ include ../template/_mixins
 				.row.fade2-animation(ng-show="vm.games.length > 0")
 					.clear
 						+icon('times')(ng-click="vm.q = ''").a
-					.paginator(ng-show="vm.pagination.count > 12")
-						span(ng-show="vm.pagination.links.first", ng-click="vm.paginate(vm.pagination.links.first)"): +icon('angle-left-skip').shift-up.smaller.a.a--lighter
-						span.space-left(ng-show="vm.pagination.links.prev", ng-click="vm.paginate(vm.pagination.links.prev)"): +icon('angle-left').shift-up.smaller.a.a--lighter
-						span.small.space-left PAGE &nbsp; {{ vm.pagination.page }} / {{ vm.pagination.pageCount }}
-						span.space-left(ng-show="vm.pagination.links.next", ng-click="vm.paginate(vm.pagination.links.next)"): +icon('angle-right').shift-up.smaller.a.a--lighter
-						span.space-left(ng-show="vm.pagination.links.last", ng-click="vm.paginate(vm.pagination.links.last)"): +icon('angle-right-skip').shift-up.smaller.a.a--lighter
+					.paginator(ng-show="vm.pagination.count > 12)
+						+paginator('vm.pagination', 'vm.paginate')
 
-					.col-md-3.col-sm-4.col-xs-6(ng-repeat="game in vm.games", ng-click="navGame(game.id)")
+					.col-md-3.col-sm-4.col-xs-6(ng-repeat="game in vm.games", ui-sref="gameDetails({ id: game.id})")
 						.panel.panel--animated.ng-cloak
 							.img.img--ar-bg.img--rounded-top(img-bg="vm.App.img(game.backglass, 'small')")
 							.text-center.padder-horizontal
