--- a/src/app/profile/profile.settings.pug
+++ b/src/app/profile/profile.settings.pug
@@ -43,7 +43,7 @@ include ../template/_mixins
 	div.alert.alert-danger(ng-show="vm.errors.email")
 		p
 			+icon('warning').shift-up.space-right
-			| {{ errors.email }}
+			| {{ vm.errors.email }}
 
 .col-sm-offset-3.col-sm-7
 	button.btn.btn-default.pull-right(ng-click="vm.updateUserProfile()")
@@ -77,7 +77,7 @@ include ../template/_mixins
 			.clearfix
 			div.alert.alert-danger(ng-show="vm.errors.password")
 				+icon('warning').shift-up.space-right
-				| {{ vm.rrors.password }}
+				| {{ vm.errors.password }}
 
 		.form-group(ng-class="{ error: vm.errors.password2 }")
 			label.col-sm-3.control-label Confirm Password
@@ -153,7 +153,7 @@ include ../template/_mixins
 	p(ng-hide="vm.AuthService.user.plan.app_tokens_enabled") This allows you to give other applications such as VPDB Agent full access to the API without having to hand over your password. However, application tokens are currently disabled for your current plan.
 	p(ng-show="vm.AuthService.user.plan.app_tokens_enabled") This allows you to give other applications such as VPDB Agent full access to the API without having to hand over your password. You can delete or temporarily disable these tokens any time.
 
-	.alert.alert-success.padder-bottom(ng-show="showTokenAlert")
+	.alert.alert-success.padder-bottom(ng-show="vm.showTokenAlert")
 		+icon('warning').shift-up.space-right
 		| Make sure to copy your new application access token now. You won't be able to see it again!
 
