--- a/src/app/releases/add-04-authors.pug
+++ b/src/app/releases/add-04-authors.pug
@@ -1,6 +1,6 @@
-i.pull-left(ng-show="release.authors.length == 0") No authors added.
+i.pull-left(ng-show="vm.release.authors.length == 0") No authors added.
 .row--fullwidth
-	.media.media--mini.media--mini-noborders.col-sm-4(ng-repeat="author in vm.release.authors", ng-mouseenter="hovering=true", ng-mouseleave="hovering=false")
+	.media.media--mini.media--mini-noborders.col-sm-4(ng-repeat="author in vm.release.authors", ng-mouseenter="hovering = true", ng-mouseleave="hovering = false")
 		.media-left.media-middle
 			img.img-avatar.img-avatar--sm(gravatar-src="vm.meta.users[author._user].gravatar_id", gravatar-default="retro", fallback-icon="user")
 		.media-body
