--- a/src/app/releases/add-05-compat.pug
+++ b/src/app/releases/add-05-compat.pug
@@ -16,22 +16,22 @@ ul.list--files
 					span Official Releases
 				hr.hr--thin.hr--margin-small
 				.simple-list(ng-repeat="build in vm.builds.release | filter:{is_range:false}")
-					input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
-					label(for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
+					input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", ng-attr-id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
+					label(ng-attr-for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
 			.col-md-4
 				span
 					span Nightly Builds
 				hr.hr--thin.hr--margin-small
 				.simple-list(ng-repeat="build in vm.builds.nightly | filter:{is_range:false}")
-					input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
-					label(for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
+					input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", ng-attr-id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
+					label(ng-attr-for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
 			.col-md-4
 				span
 					span Test Builds
 				hr.hr--thin.hr--margin-small
 				.simple-list(ng-repeat="build in vm.builds.experimental | filter:{is_range:false}")
-					input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
-					label(for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
+					input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", ng-attr-id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
+					label(ng-attr-for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
 			.col-md-12
 				p.padder-top
 				button.btn.btn-default.pull-right(ng-click="vm.addBuild()")
@@ -45,4 +45,4 @@ ul.list--files
 
 .text-center(ng-show="(vm.meta.files | fileext:['vpt','vpx']).length == 0")
 	+icon('warning').shift-up.space-right
-	i Upload <code>.vpt</code>/<code>.vpx</code> files under {{ step.files }}. before setting compatibility.
+	i Upload <code>.vpt</code>/<code>.vpx</code> files under {{ vm.step.files }}. before setting compatibility.
