--- a/src/app/releases/add-07-upload.media.pug
+++ b/src/app/releases/add-07-upload.media.pug
@@ -10,9 +10,7 @@ span(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 	.row(ng-show="vm.getReleaseFile(file).flavor.orientation")
 
 		//-- playfield image
-		.col-sm-6.playfield--rotate-on-upload(
-			class="angle--{{ vm.meta.mediaLinks[vm.getMediaKey(file, 'playfield_image')].rotation }}"
-		)
+		.col-sm-6.playfield--rotate-on-upload(class="angle--{{ vm.meta.mediaLinks[vm.getMediaKey(file, 'playfield_image')].rotation }}")
 			span.pre-h4 Playfield
 			h4.h--large
 				| Screenshot
@@ -31,8 +29,8 @@ span(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 			)
 				.panel-body.a.a--darker
 					.img.img--ar-ws.loaded(
-						img-bg="vm.meta.mediaLinks[getMediaKey(file, 'playfield_image')]",
-						error="vm.onBackglassImageError(file, vm.meta.mediaLinks[getMediaKey(file, 'playfield_image')] ? 'playfield_image' : 'screenshot')"
+						img-bg="vm.meta.mediaLinks[vm.getMediaKey(file, 'playfield_image')]",
+						error="vm.onBackglassImageError(file, vm.meta.mediaLinks[vm.getMediaKey(file, 'playfield_image')] ? 'playfield_image' : 'screenshot')"
 					)
 						//- content panel
 						.text-center.vertical-center--100
@@ -58,7 +56,7 @@ span(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 				file-upload="{ controller: vm, type: vm.getPlayfieldType(file), key: vm.getMediaKey(file, 'playfield_video'), status: vm.meta.mediaFiles, onSuccess: vm.onMediaUpload, onClear: vm.onMediaClear, allowedExtensions: ['flv', 'f4v', 'mp4', 'avi'], allowMultipleFiles: false, disableSelect: true }",
 				ngf-drag-over-class="'panel--dragging'",
 				ng-class="{ error: vm.errors.versions[0].files[vm.meta.files.indexOf(file)]._playfield_video }",
-				ng-show="vm.loadingFinished",
+				ng-show="loadingFinished",
 			)
 				.panel-body.a.a--darker
 					.img.img--ar-fs.loaded
@@ -81,7 +79,7 @@ span(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 						.text-center.vertical-center--100
 							//- progress bar
 							uib-progressbar.progress--fixed-absolute.progress-striped.active(
-								value="vm.meta.mediaFiles[getMediaKey(file, 'playfield_video')].progress",
+								value="vm.meta.mediaFiles[vm.getMediaKey(file, 'playfield_video')].progress",
 								ng-show="vm.meta.mediaFiles[vm.getMediaKey(file, 'playfield_video')].uploading"
 							)
 							//-
