--- a/src/app/releases/release.add.version.pug
+++ b/src/app/releases/release.add.version.pug
@@ -15,7 +15,7 @@ include ../template/_mixins
 				input.input-lg(type="radio", name="mode", value="newFile", ng-model="vm.meta.mode")
 				span.aligned: h1 Existing version
 
-			input.form-control.width-md.pull-right(type="text", ng-disabled="vm.meta.mode == 'newFile'", ng-model="releaseVersion.version", placeholder="x.x.x")
+			input.form-control.width-md.pull-right(type="text", ng-disabled="vm.meta.mode == 'newFile'", ng-model="vm.releaseVersion.version", placeholder="x.x.x")
 			.radio--lg: label
 				input(type="radio", name="mode", value="newVersion", ng-model="vm.meta.mode")
 				span.aligned: h1 New version
@@ -27,48 +27,44 @@ include ../template/_mixins
 		.row: .col-sm-10.col-sm-offset-1
 			.form-group(ng-show="vm.meta.mode == 'newVersion'")
 				label.control-label Release Information
-				editor.tabset--light(ng-model="releaseVersion.changes", placeholder="Release Information", markdown-text="Markdown enabled. This will show up in the release's change log.")
+				editor.tabset--light(ng-model="vm.releaseVersion.changes", placeholder="Release Information", markdown-text="Markdown enabled. This will show up in the release's change log.")
 
 		.row: .col-sm-10.col-sm-offset-1
 			.form-group(ng-show="vm.meta.mode == 'newVersion'")
 				label.control-label Release Date
 				.row
 					.col-sm-4: .input-group
-						input.form-control.datepicker(type='text', ng-model='vm.meta.releaseDate', ng-required='true',
-						uib-datepicker-popup="yyyy-MM-dd",
-						is-open="calendarOpened",
-						close-text="Close",
-						show-weeks="false",
-						starting-day="1")
-						span.input-group-addon: +icon('calendar').a(ng-click='openCalendar($event)')
+						input.form-control.datepicker(
+							type="text",
+							ng-model="vm.meta.releaseDate",
+							uib-datepicker-popup="yyyy-MM-dd",
+							is-open="calendarOpened",
+							close-text="Close",
+							show-weeks="false",
+							starting-day="1",
+							ng-required
+						)
+						span.input-group-addon: +icon('calendar').a(ng-click='vm.openCalendar($event)')
 					.col-sm-3
-						uib-timepicker(ng-model="vm.meta.releaseTime", hour-step="1", minute-step="5", show-meridian="ismeridian")
+						uib-timepicker(ng-model="vm.meta.releaseTime", hour-step="1", minute-step="5", show-meridian="false")
 					.col-sm-5
 						i Leave empty for submission time.
 
 
-		//---------------------------------------------------------------------
 		h1 1. Upload Files
 		hr
-
 		include add-01-upload.files.pug
 
-		//---------------------------------------------------------------------
 		h1 2. Define your Flavors
 		hr
-
 		include add-03-flavors.pug
 
-		//---------------------------------------------------------------------
 		h1 3. Set Compatibility
 		hr
-
 		include add-05-compat.pug
 
-		//---------------------------------------------------------------------
 		h1 4. Upload Media
 		hr
-
 		include add-07-upload.media.pug
 
 		//------------------------- FINISH LINE -------------------------------
@@ -77,7 +73,7 @@ include ../template/_mixins
 		.alert.alert-danger.alert--inverted.padder-bottom(ng-show="vm.errors && vm.errors.__count")
 			+icon('warning').shift-up.space-right
 			| There were errors while submitting your release. Please scroll up and fix the marked fields.
-		a.btn.btn-hollow.btn-lg.space-right(ui-sref="releaseDetails({ id: game.id, releaseId: release.id })") Cancel
+		a.btn.btn-hollow.btn-lg.space-right(ui-sref="releaseDetails({ id: vm.game.id, releaseId: vm.release.id })") Cancel
 		button.btn.btn-default.btn-lg(ng-click="vm.reset()") Reset
 		button.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="vm.submitting") Submit
 		.clearfix
