--- a/src/app/releases/release.edit.version.modal.pug
+++ b/src/app/releases/release.edit.version.modal.pug
@@ -19,17 +19,20 @@ include ../template/_mixins
 		.form-group.padder-bottom-2x(ng-class="{ error: vm.errors.released_at }")
 			.row
 				.col-sm-3: .input-group
-					input.form-control.datepicker(type='text', ng-model='vm.version.released_at', ng-required='true',
+					input.form-control.datepicker(
+						type="text",
+						ng-model="vm.version.released_at",
 						uib-datepicker-popup="yyyy-MM-dd",
 						format-day-header="EE"
 						is-open="calendarOpened",
 						close-text="Close",
 						show-weeks="false",
-						starting-day="1"
+						starting-day="1",
+						ng-required
 					)
 					span.input-group-addon: +icon('calendar').a(ng-click='vm.openCalendar($event)')
 				.col-sm-2
-					uib-timepicker(ng-model="vm.meta.releaseTime", hour-step="1", minute-step="5", show-meridian="ismeridian")
+					uib-timepicker(ng-model="vm.meta.releaseTime", hour-step="1", minute-step="5", show-meridian="false")
 
 		//- FILES
 		//-----------------------------------------
@@ -46,22 +49,22 @@ include ../template/_mixins
 						span Official Releases
 					hr.hr--thin.hr--margin-small
 					.simple-list(ng-repeat="build in vm.builds.release | filter:{is_range:false}")
-						input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
-						label(for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
+						input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", ng-attr-id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
+						label(ng-attr-for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
 				.col-md-4
 					span
 						span Nightly Builds
 					hr.hr--thin.hr--margin-small
 					.simple-list(ng-repeat="build in vm.builds.nightly | filter:{is_range:false}")
-						input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
-						label(for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
+						input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", ng-attr-id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
+						label(ng-attr-for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
 				.col-md-4
 					span
 						span Test Builds
 					hr.hr--thin.hr--margin-small
 					.simple-list(ng-repeat="build in vm.builds.experimental | filter:{is_range:false}")
-						input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
-						label(for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
+						input.checkbox--check(ng-checked="vm.getReleaseFile(file)._compatibility.indexOf(build.id) > -1", ng-click="vm.toggleBuild(file, build)", ng-attr-id="dev-{{ file.storage.id }}-{{ build.id }}", type="checkbox")
+						label(ng-attr-for="dev-{{ file.storage.id }}-{{ build.id }}") {{ build.label }}
 
 			.clearfix.padder-top-2x
 
@@ -88,7 +91,7 @@ include ../template/_mixins
 					)
 						.panel-body.a.a--darker
 							.img.img--ar-ws.loaded(
-								img-bg="vm.meta.mediaLinks[getMediaKey(file, 'playfield_image')]",
+								img-bg="vm.meta.mediaLinks[vm.getMediaKey(file, 'playfield_image')]",
 								error="vm.onBackglassImageError(file, 'playfield_image')"
 							)
 								//- content panel
@@ -107,7 +110,7 @@ include ../template/_mixins
 										p Generating thumbnails...
 
 				//-- playfield video
-				.col-sm-6.playfield--rotate-on-upload(make-loaded="{ loaded: getReleaseFile(file).flavor.orientation !== 'ws' }", make-loaded-event="video", make-loaded-post="loadingFinished")
+				.col-sm-6.playfield--rotate-on-upload(make-loaded="{ loaded: vm.getReleaseFile(file).flavor.orientation !== 'ws' }", make-loaded-event="video", make-loaded-post="loadingFinished")
 					span.pre-h4 Playfield
 					h4 Video
 
@@ -115,7 +118,7 @@ include ../template/_mixins
 					file-upload="{ controller: vm, type: vm.getPlayfieldType(file), key: vm.getMediaKey(file, 'playfield_video'), status: vm.meta.mediaFiles, onSuccess: vm.onMediaUpload, onClear: vm.onMediaClear, allowedExtensions: ['flv', 'f4v', 'mp4', 'avi'], allowMultipleFiles: false, disableSelect: true }",
 						ngf-drag-over-class="'panel--dragging'",
 						ng-class="{ error: vm.errors.files[vm.meta.files.indexOf(file)]._playfield_video }",
-						ng-show="loadingFinished",
+						ng-show="loadingFinished"
 					)
 						.panel-body.a.a--darker
 							.img.img--ar-fs.loaded
@@ -141,7 +144,6 @@ include ../template/_mixins
 										value="vm.meta.mediaFiles[vm.getMediaKey(file, 'playfield_video')].progress",
 										ng-show="vm.meta.mediaFiles[vm.getMediaKey(file, 'playfield_video')].uploading"
 									)
-									//-
 									span(ng-show="!img.url")
 										+icon('video-camera').svg-4x(ng-class="{ transparent: vm.meta.mediaFiles[vm.getMediaKey(file, 'playfield_video')].uploading }")
 										p {{ vm.meta.mediaFiles[vm.getMediaKey(file, 'playfield_video')].status || 'Click or drag and drop here' }}
@@ -159,7 +161,7 @@ include ../template/_mixins
 
 	.modal-footer
 		button.btn.btn-hollow.pull-left(ng-click="$dismiss()") Cancel
-		button.btn.btn--secondary(ng-click="save()", ng-disabled="!vm.AuthService.isAuthenticated || vm.pageLoading")
+		button.btn.btn--secondary(ng-click="vm.save()", ng-disabled="!vm.AuthService.isAuthenticated || vm.pageLoading")
 			+icon('check-circle').space-right
 			| Save Changes
 
