--- a/src/app/releases/release.list.pug
+++ b/src/app/releases/release.list.pug
@@ -20,12 +20,7 @@ include ../template/_mixins
 
 		//- pagination
 		.pull-right(ng-show="vm.releases.length > 0")
-
-			span(ng-show="vm.pagination.links.first", ng-click="vm.paginate(vm.pagination.links.first)"): +icon('angle-left-skip').smaller.a.a--lighter
-			span.space-left(ng-show="vm.pagination.links.prev", ng-click="vm.paginate(vm.pagination.links.prev)"): +icon('angle-left').smaller.a.a--lighter
-			span.small.space-left PAGE &nbsp; {{ vm.pagination.page }} / {{ vm.pagination.pageCount }}
-			span.space-left(ng-show="vm.pagination.links.next", ng-click="vm.paginate(vm.pagination.links.next)"): +icon('angle-right').smaller.a.a--lighter
-			span.space-left(ng-show="vm.pagination.links.last", ng-click="vm.paginate(vm.pagination.links.last)"): +icon('angle-right-skip').smaller.a.a--lighter
+			+paginator('vm.pagination', 'vm.paginate')
 
 		.clearfix.padder-bottom(ng-show="vm.releases.length > 0")
 
