--- a/src/app/uploads/uploads.list.admin.pug
+++ b/src/app/uploads/uploads.list.admin.pug
@@ -1,4 +1,5 @@
 include ../template/_mixins
+include ../template/paginator
 
 .row.row--fullheight(ng-controller="UploadsListAdminCtrl as vm")
 	.col-sm-3.col--menu
