--- a/src/app/auth/login.modal.pug
+++ b/src/app/auth/login.modal.pug
@@ -1,6 +1,6 @@
 include ../template/_mixins
 
-.theme-light
+#login-modal.theme-light
 	.modal-header
 		h1.h--no-margin.h--small
 			+icon('lock').space-right
