--- a/src/app/auth/login.modal.pug
+++ b/src/app/auth/login.modal.pug
@@ -74,7 +74,7 @@ include ../template/_mixins
 			+icon('warning').space-right.shift-up
 			| {{ vm.error }}
 		div.alert.alert-success(ng-show="vm.message")
-			+icon('vm.info').space-right.shift-up
+			+icon('info').space-right.shift-up
 			| {{ vm.message }}
 
 		.text-center.padder-top.i(ng-show="vm.message2", ng-bind-html="vm.message2")
